[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gpcam"
dependencies = [
    "wheel",
    "scipy ~= 1.16.0",
    "numpy ~= 2.2.6",
    "dask ~= 2025.5.1",
    "distributed ~= 2025.5.1",
    "fvgp ~= 4.7.2",
    "loguru",
]
requires-python = ">=3.11"
authors = [
    { name = "Marcus Michael Noack", email = "MarcusNoack@lbl.gov" },
    { name = "Ronald J. Pandolfi", email = "ronpandolfi@lbl.gov" },
]
maintainers = [
    { name = "Marcus Michael Noack", email = "MarcusNoack@lbl.gov" },
    { name = "Ronald J. Pandolfi", email = "ronpandolfi@lbl.gov" },
]
description = "Autonomous data acquisition"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gaussian process", "bayesian optimization", "autonomous", "self driving", "adaptive"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Intended Audience :: Developers',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Natural Language :: English",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ['sphinx', 'sphinx-immaterial', 'myst-parser', 'myst-nb', 'sphinx-panels', 'autodocs', 'sphinx-hoverxref']
tests = ['pytest', 'codecov', 'pytest-cov', 'imate', 'torch']
plotting = ['matplotlib', 'plotly', 'notebook']

[project.urls]
Homepage = "https://gpcam.lbl.gov"
Documentation = "https://gpcam.readthedocs.io/"
Repository = "https://github.com/lbl-camera/gpcam.git"
"Bug Tracker" = "https://github.com/lbl-camera/gpcam/issues"
Changelog = "https://github.com/lbl-camera/gpcam/commits/master/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "gpcam/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["gpcam"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
